fix text position on mobile

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -16,3 +16,12 @@
         text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     }
 }
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+    .banner {
+        p {
+            top: 10vmax;
+        }   
+    }   
+}
